--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "object-assign": "4.1.0",
     "react": "16.0.0",
     "react-dom": "16.0.0",
+    "react-jsonschema-form": "1.0.0",
     "react-redux": "5.0.5",
     "react-router-dom": "4.2.2",
     "react-router-redux": "5.0.0-alpha.6",
