--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-redux": "5.0.5",
     "react-router-dom": "4.2.2",
     "react-router-redux": "5.0.0-alpha.6",
+    "react-sortable-hoc": "0.6.8",
     "redux": "3.6.0",
     "redux-thunk": "2.1.0"
   },
